discard spring security implemention, secure endpoint with permission and role